# arpg

./: .gitignore  CMakeLists.txt  README.md  build.sh
assets/shaders/: light.glsl  light_blending.glsl  screenspace_texture.glsl  shader.glsl  shader2.glsl
src/: asset.h  asset_manager.c  asset_manager.h  asset_system.c  asset_system.h  assets.c  assets.h  file_watcher.c  file_watcher.h  font.c  font.h  hot_reload.c  hot_reload.h  image.c  image.h  input.h  main.c  platform.h  platform_linux.c  renderer_dispatch.c  renderer_dispatch.h  shader.c  shader.h  tests.c
src/base/: allocator.c  allocator.h  direction.h  dynamic_array.c  dynamic_array.h  format.h  free_list_arena.c  free_list_arena.h  hash.h  image.c  image.h  line.h  linear_arena.c  linear_arena.h  linked_list.c  linked_list.h  list.h  maths.h  matrix.h  polygon.c  polygon.h  random.c  random.h  rectangle.h  rgba.h  ring_buffer.h  sl_list.h  span.h  string8.c  string8.h  thread_context.c  thread_context.h  timestamp.h  triangle.h  typedefs.h  utils.h  vector.h  vector2.h
src/game/: ai.c  ai.h  animation.c  animation.h  asset_table.c  asset_table.h  assets.c  assets.h  callback.h  callback_functions.c  callback_functions.h  camera.h  collision.c  collision.h  collision_event.h  collision_policy.c  collision_policy.h  component.h  damage.c  damage.h  debug.c  debug.h  entity.c  entity.h  entity_faction.h  entity_id.h  entity_state.c  entity_state.h  entity_system.c  entity_system.h  equipment.c  equipment.h  event_callback.h  game.c  game.h  game_ui.c  game_ui.h  game_world.h  generational_id.h  health.c  (+34 more)
src/game/collision/: collider.h  collision.c  collision.h  collision_event.c  collision_event.h  collision_policy.c  collision_policy.h  trigger.c  trigger.h
src/game/components/: callback.c  callback.h  chain.c  chain.h  collider.h  component.h  component_id.h  equipment.c  equipment.h  event_listener.c  event_listener.h  inventory.c  inventory.h  name.h  particle.c  particle.h  particle_spawner.c  particle_spawner.h  status_effect.h
src/game/entity/: entity.h  entity_arena.c  entity_arena.h  entity_faction.h  entity_id.h  entity_state.c  entity_state.h  entity_system.c  entity_system.h
src/game/renderer/: render_batch.c  render_batch.h  render_command.h  render_key.h
src/game/ui/: ui_builder.c  ui_builder.h  ui_core.c  ui_core.h  widget.h
src/game/world/: chunk.c  chunk.h  line_of_sight.c  line_of_sight.h  quad_tree.c  quad_tree.h  tilemap.c  tilemap.h  world.c  world.h
src/os/: file.h  path.h  thread_context.h  window.h
src/os/linux/: file.c  path.c  thread_context.c  window.c
src/platform/: asset.h  asset_system.c  asset_system.h  file.h  file_watcher.c  file_watcher.h  font.c  font.h  hot_reload.c  hot_reload.h  image.c  image.h  image_decode.c  image_decode.h  input.h  path.h  platform.h  platform_linux.c  renderer_dispatch.c  renderer_dispatch.h  window.h
src/platform/linux/: file.c  path.c  window.c
src/render/: render_batch.c  render_batch.h  render_command.h  render_key.h  vertex.h
src/render/backend/: renderer_backend.h
src/render/backend/open_gl/: renderer_backend.c
src/renderer/: render_target.h  renderer_backend.h  shader.c  vertex_buffer.h
src/renderer/backend/: render_command_interpreter.c  render_command_interpreter.h  renderer_backend.h  renderer_dispatch.c
src/renderer/backend/open_gl/: renderer_backend.c
src/renderer/frontend/: render_batch.c  render_batch.h  render_command.h  render_key.h  render_target.h
src/renderer/open_gl/: renderer_backend.c
test/: CMakeLists.txt  generate_test_runner.py  test.c  test_main.c
test/include/: test_macros.h  testing_utils.h
test/src/base/: test_dynamic_array.c  test_format.c  test_free_list_arena.c  test_linear_arena.c  test_list.c  test_math.c  test_ring.c  test_sl_list.c  test_string.c  test_utils.c
test/src/game/: test_entity_arena.c  test_entity_system.c  test_inventory.c  test_item_system.c
